--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,6 +29,7 @@
   <meta property="twitter:title" content="Travel Map - Places Reviews & Rating" />
   <meta property="twitter:description" content="This a simple travel map app created using React.js. This app created for educational purposes only." />
   <meta property="twitter:image" content="%PUBLIC_URL%/travel-map.png" />
+  <meta name='robots' content='index, follow' />
   </head>
   <body>
     <div id="root"></div>
